# simple-rag-example

./: .gitignore  README.md  main.py  pyproject.toml
notebook/: embedding_model.ipynb  qwen.ipynb  qwen_llm.ipynb  rag_example.ipynb
src/api/: rag_router.py
src/chunker/: chunker.py
src/config/: config.py
src/embedding/: custom_embedding.py
src/llm/: qwen_llm.py
src/prompt/: prompt_builder.py  prompt_template.py
src/rag/: rag_service.py
src/storage/: faiss_db.py  lancedb.py
test/: test_qwen_llm.py
test/rag/: test_rag.py
