[project]
name = "simple-rag-example"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.8.1",
    "docling>=2.41.0",
    "fastapi[standard]>=0.116.1",
    "lancedb>=0.24.1",
    "pandas>=2.3.1",
    "sentence-transformers>=5.0.0",
]
